Subscribe to feed icon added

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,8 @@
 <div class="site">
   <div class="title">
     <a href="/">Siarhei Siamashka</a>
+    <a style="float: right" href="http://feeds.feedburner.com/ssvb">
+        <img src="/images/rss.png" alt="Subscribe to RSS Feed" /></a>
   </div>
 
   {{ content }}
