Rename github.com -> github.io in some places

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -64,7 +64,7 @@ layout: default
 
     // The following are highly recommended additional parameters. Remove the slashes in front to use.
     // var disqus_identifier = 'unique_dynamic_id_1234';
-    var disqus_url = 'http://ssvb.github.com{{ page.url }}';
+    var disqus_url = 'http://ssvb.github.io{{ page.url }}';
     //var disqus_developer = 1; // developer mode is on
 
     /* * * DON'T EDIT BELOW THIS LINE * * */
