css: Left align table captions

--- a/css/screen.css
+++ b/css/screen.css
@@ -64,6 +64,10 @@ table,th,td {
   width: 38px;
 }
 
+caption {
+    text-align:left;
+}
+
 /*****************************************************************************/
 /*
 /* Home
