css: Use "list-style-position: inside" for numbered lists

--- a/css/screen.css
+++ b/css/screen.css
@@ -89,6 +89,10 @@ ul.posts {
     font-size: 80%;
   }
 
+ol {
+  list-style-position: inside;
+}
+
 /*****************************************************************************/
 /*
 /* Site
